--- a/build.gradle
+++ b/build.gradle
@@ -67,16 +67,6 @@ javadoc {
     exclude '**/internal/**'
 }
 
-task sourceZip(type: Jar) {
-    from sourceSets.main.allSource
-    classifier = 'sources'
-}
-
-task javadocZip(type: Jar) {
-    from javadoc
-    classifier = 'javadoc'
-}
-
 task emptyZip(type: Jar) {
     classifier = 'empty'
 }
@@ -294,8 +284,21 @@ model {
             }
 
             binaries.withType(SharedLibraryBinarySpec) { binary ->
+                // TODO: Limit variants
+                def targetOs = binary.targetPlatform.operatingSystem
+                if (!targetOs.macOsX) {
+                    return
+                }
                 def variantName = targetPlatform.name.replace('_', '-')
                 variantNames << variantName
+                project.dependencies {
+                    runtimeOnly("${project.group}:native-platform-${variantName}:${project.version}")
+                }
+                project.configurations {
+                    [apiElements, runtimeElements]*.outgoing {
+                        capability("${project.group}:native-platform-${variantName}-support:${project.version}")
+                    }
+                }
 
                 if (!buildable) {
                     return
@@ -343,26 +346,25 @@ tasks.withType(CppCompile) { task ->
     task.dependsOn project.tasks.nativeHeaders
 }
 
+configurations {
+    [apiElements, runtimeElements]*.outgoing {
+        capability("${project.group}:native-platform:${project.version}")
+    }
+}
+
+java {
+    withSourcesJar()
+    withJavadocJar()
+}
+
 publishing {
     publications {
         main(MavenPublication) {
+            suppressAllPomMetadataWarnings()
             groupId = project.group
             artifactId = jar.baseName
             version = project.version
-            artifact jar
-            artifact sourceZip
-            artifact javadocZip
-            pom.withXml { provider ->
-                def node = provider.asNode()
-                def deps = node.appendNode('dependencies')
-                variantNames.each { p ->
-                    def dep = deps.appendNode('dependency')
-                    dep.appendNode('groupId', project.group)
-                    dep.appendNode('artifactId', "native-platform-${p}")
-                    dep.appendNode('version', project.version)
-                    dep.appendNode('scope', 'runtime')
-                }
-            }
+            from(components.java)
         }
     }
 }
